@@ -1,1 +1,2 @@
+DIST jopt-simple-4.4.tar.gz 101940 SHA256 96df6d6a36f28e9c277f1aee83b48d085faba89aa4de02fd518bd81e122d0ffc SHA512 a7b4eb6d46d5f7d52b04d352b787050dbcf080d646f6654514175ff5fed3b031f452706e03a45a0330aaffab8ceaba8363b64716df4dc4c27e0f461cf887d3bd WHIRLPOOL 252a1466c45e715d02a341458fb60d4e1750a43c24e54894ba39056b0d0c45fd8024b4ea17c08cb51c796ad78e949035b4b96ae74e0580fe42132246501844b7
 DIST jopt-simple-4.5.tar.gz 104369 SHA256 844fceb3e0e31d4cdfb2fad97a61b97904e979c8749682fe5758ccda24c54ec6 SHA512 d75747a1bc298cbd5f009a189e175895a8f808f77e6d2d56cb5f6e76f16573b659ba7f7ed5ca94c850e0196d9d831b1d6b14b713764fd599859c652080d741ef WHIRLPOOL a66d7d0e9ec2c5a3cfa04d8cf097d5e615452f1ca1459aae33101ef4b70a7b258e5a88da1a189d4b29600e17674c59bd378e47a8357b365137ee38cbab8aa6d9
