@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*jopt-simple-4.4 (01 Sep 2013)
+
+  01 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +jopt-simple-4.4.ebuild:
+  Added another version of jopt-simple (version 4.5 has a breaking change)
+
 *jopt-simple-4.5 (01 Sep 2013)
 
   01 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +jopt-simple-4.5.ebuild,
